--- a/projects/global_wheat.yml
+++ b/projects/global_wheat.yml
@@ -1,5 +1,7 @@
 project_name: global-wheat-detection  # also the folder name of the dataset that under data_path folder
-num_gpus: 4
+train_set: train
+val_set: test
+num_gpus: 1
 
 # mean and std in RGB order, actually this part should remain unchanged as long as your dataset is similar to coco.
 mean: [0.485, 0.456, 0.406]
