torch.cuda.amp requires torch1.6

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+torch
+torchvision
 pycocotools
 numpy
 opencv-python
@@ -6,5 +8,3 @@ tensorboard
 tensorboardX
 pyyaml
 webcolors
-torch==1.4.0
-torchvision==0.5.0
